// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`timeline-activity should show an icon with class fa-commenting-o when Type is CommunityPost and SubType is not Reply 1`] = `
<pf-timeline-activity
  timelineActivities={[Function Array]}
>
  <div
    class="card px-1 py-3"
  >
    
    
    <div
      class="card-header d-flex align-items-center pl-1"
    >
      
      
      <i
        aria-hidden="true"
        class="fa fa-2x fa-commenting-o px-2"
      />
      
      
      <h4>
        Recent Activity
      </h4>
      
    
    </div>
    
    
    <div
      class="card-block pt-3 pb-1"
    >
      
      
      <div
        class="px-1"
      >
        
        
        <ul
          class="timeline"
        >
          
          
          
          <li>
            
            
            <div
              class="timeline-icon"
            >
              
              
              
              
              
                
              
              <i
                class="fa fa-circle-thinner fa-commenting-o"
              />
              
                
              
              
              
              
              
              
              
              
              
              
            
            </div>
            
            
            <div
              class="timeline-panel"
            >
              
              
              <div
                class="timeline-header d-inline-flex  align-items-center"
              >
                
                
                <img
                  class="pf-avatar"
                  src="/assets/john.png"
                />
                
                
                <h6
                  class="pl-2 mt-3"
                >
                  
                  
                  <a
                    class="pr-2"
                    href="#"
                  >
                    John Clark
                  </a>
                  
                
                </h6>
                
                
                <h6
                  class="mt-3"
                >
                  3m ago
                </h6>
                
              
              </div>
              
              
              <h6
                class="timeline-source py-1"
              >
                <span>
                  Replied To Mike Davidson's post
                </span>
              </h6>
              
              
              
              <div
                class="timeline-body p-3"
              >
                <span>
                  Reply to Loriem Ipsum is simple a dummy text of the printing and typesetting industry.
                </span>
              </div>
              
            
            </div>
            
          
          </li>
          
        
        </ul>
        
      
      </div>
      
    
    </div>
    
    
    <div
      class="d-flex justify-content-center"
    >
      
      
      <button
        class="btn btn-primary"
        type="button"
      >
        Show More
      </button>
      
    
    </div>
    
  
  </div>
  
</pf-timeline-activity>
`;

exports[`timeline-activity should show an icon with class fa-comments when Type is CommunityPost and SubType is Reply 1`] = `
<pf-timeline-activity
  timelineActivities={[Function Array]}
>
  <div
    class="card px-1 py-3"
  >
    
    
    <div
      class="card-header d-flex align-items-center pl-1"
    >
      
      
      <i
        aria-hidden="true"
        class="fa fa-2x fa-commenting-o px-2"
      />
      
      
      <h4>
        Recent Activity
      </h4>
      
    
    </div>
    
    
    <div
      class="card-block pt-3 pb-1"
    >
      
      
      <div
        class="px-1"
      >
        
        
        <ul
          class="timeline"
        >
          
          
          
          <li>
            
            
            <div
              class="timeline-icon"
            >
              
              
              
              
              
                
              
              
                
              
              <i
                class="fa fa-circle-thinner fa-comments"
              />
              
              
              
              
              
              
              
              
              
            
            </div>
            
            
            <div
              class="timeline-panel"
            >
              
              
              <div
                class="timeline-header d-inline-flex  align-items-center"
              >
                
                
                <img
                  class="pf-avatar"
                  src="/assets/john.png"
                />
                
                
                <h6
                  class="pl-2 mt-3"
                >
                  
                  
                  <a
                    class="pr-2"
                    href="#"
                  >
                    John Clark
                  </a>
                  
                
                </h6>
                
                
                <h6
                  class="mt-3"
                >
                  3m ago
                </h6>
                
              
              </div>
              
              
              <h6
                class="timeline-source py-1"
              >
                <span>
                  Replied To Mike Davidson's post
                </span>
              </h6>
              
              
              
              <div
                class="timeline-body p-3"
              >
                <span>
                  Reply to Loriem Ipsum is simple a dummy text of the printing and typesetting industry.
                </span>
              </div>
              
            
            </div>
            
          
          </li>
          
        
        </ul>
        
      
      </div>
      
    
    </div>
    
    
    <div
      class="d-flex justify-content-center"
    >
      
      
      <button
        class="btn btn-primary"
        type="button"
      >
        Show More
      </button>
      
    
    </div>
    
  
  </div>
  
</pf-timeline-activity>
`;

exports[`timeline-activity should show an icon with fa-info when Type is ResourcesPost 1`] = `
<pf-timeline-activity
  timelineActivities={[Function Array]}
>
  <div
    class="card px-1 py-3"
  >
    
    
    <div
      class="card-header d-flex align-items-center pl-1"
    >
      
      
      <i
        aria-hidden="true"
        class="fa fa-2x fa-commenting-o px-2"
      />
      
      
      <h4>
        Recent Activity
      </h4>
      
    
    </div>
    
    
    <div
      class="card-block pt-3 pb-1"
    >
      
      
      <div
        class="px-1"
      >
        
        
        <ul
          class="timeline"
        >
          
          
          
          <li>
            
            
            <div
              class="timeline-icon"
            >
              
              
              
              
              
              
              
              
              
              <i
                class="fa fa-circle-thinner fa-info"
              />
              
            
            </div>
            
            
            <div
              class="timeline-panel"
            >
              
              
              <div
                class="timeline-header d-inline-flex  align-items-center"
              >
                
                
                <img
                  class="pf-avatar"
                  src="/assets/john.png"
                />
                
                
                <h6
                  class="pl-2 mt-3"
                >
                  
                  
                  <a
                    class="pr-2"
                    href="#"
                  >
                    John Clark
                  </a>
                  
                
                </h6>
                
                
                <h6
                  class="mt-3"
                >
                  3m ago
                </h6>
                
              
              </div>
              
              
              <h6
                class="timeline-source py-1"
              >
                <span>
                  Replied To Mike Davidson's post
                </span>
              </h6>
              
              
              
              <div
                class="timeline-body p-3"
              >
                <span>
                  Reply to Loriem Ipsum is simple a dummy text of the printing and typesetting industry.
                </span>
              </div>
              
            
            </div>
            
          
          </li>
          
        
        </ul>
        
      
      </div>
      
    
    </div>
    
    
    <div
      class="d-flex justify-content-center"
    >
      
      
      <button
        class="btn btn-primary"
        type="button"
      >
        Show More
      </button>
      
    
    </div>
    
  
  </div>
  
</pf-timeline-activity>
`;

exports[`timeline-activity should show an icon with fa-share when Type is ActivityPost 1`] = `
<pf-timeline-activity
  timelineActivities={[Function Array]}
>
  <div
    class="card px-1 py-3"
  >
    
    
    <div
      class="card-header d-flex align-items-center pl-1"
    >
      
      
      <i
        aria-hidden="true"
        class="fa fa-2x fa-commenting-o px-2"
      />
      
      
      <h4>
        Recent Activity
      </h4>
      
    
    </div>
    
    
    <div
      class="card-block pt-3 pb-1"
    >
      
      
      <div
        class="px-1"
      >
        
        
        <ul
          class="timeline"
        >
          
          
          
          <li>
            
            
            <div
              class="timeline-icon"
            >
              
              
              
              
              
              
              <i
                class="fa fa-circle-thinner fa-share"
              />
              
              
              
              
            
            </div>
            
            
            <div
              class="timeline-panel"
            >
              
              
              <div
                class="timeline-header d-inline-flex  align-items-center"
              >
                
                
                <img
                  class="pf-avatar"
                  src="/assets/john.png"
                />
                
                
                <h6
                  class="pl-2 mt-3"
                >
                  
                  
                  <a
                    class="pr-2"
                    href="#"
                  >
                    John Clark
                  </a>
                  
                
                </h6>
                
                
                <h6
                  class="mt-3"
                >
                  3m ago
                </h6>
                
              
              </div>
              
              
              <h6
                class="timeline-source py-1"
              >
                <span>
                  Replied To Mike Davidson's post
                </span>
              </h6>
              
              
              
              <div
                class="timeline-body p-3"
              >
                <span>
                  Reply to Loriem Ipsum is simple a dummy text of the printing and typesetting industry.
                </span>
              </div>
              
            
            </div>
            
          
          </li>
          
        
        </ul>
        
      
      </div>
      
    
    </div>
    
    
    <div
      class="d-flex justify-content-center"
    >
      
      
      <button
        class="btn btn-primary"
        type="button"
      >
        Show More
      </button>
      
    
    </div>
    
  
  </div>
  
</pf-timeline-activity>
`;

exports[`timeline-activity should show timeline activities 1`] = `
<pf-timeline-activity
  timelineActivities={[Function Array]}
>
  <div
    class="card px-1 py-3"
  >
    
    
    <div
      class="card-header d-flex align-items-center pl-1"
    >
      
      
      <i
        aria-hidden="true"
        class="fa fa-2x fa-commenting-o px-2"
      />
      
      
      <h4>
        Recent Activity
      </h4>
      
    
    </div>
    
    
    <div
      class="card-block pt-3 pb-1"
    >
      
      
      <div
        class="px-1"
      >
        
        
        <ul
          class="timeline"
        >
          
          
          
          <li>
            
            
            <div
              class="timeline-icon"
            >
              
              
              
              
              
              
              
              
              
              
            
            </div>
            
            
            <div
              class="timeline-panel"
            >
              
              
              <div
                class="timeline-header d-inline-flex  align-items-center"
              >
                
                
                <img
                  class="pf-avatar"
                  src="/assets/john.png"
                />
                
                
                <h6
                  class="pl-2 mt-3"
                >
                  
                  
                  <a
                    class="pr-2"
                    href="#"
                  >
                    John Clark
                  </a>
                  
                
                </h6>
                
                
                <h6
                  class="mt-3"
                >
                  3m ago
                </h6>
                
              
              </div>
              
              
              <h6
                class="timeline-source py-1"
              >
                <span>
                  Replied To Mike Davidson's post
                </span>
              </h6>
              
              
              
              <div
                class="timeline-body p-3"
              >
                <span>
                  Reply to Loriem Ipsum is simple a dummy text of the printing and typesetting industry.
                </span>
              </div>
              
            
            </div>
            
          
          </li>
          
        
        </ul>
        
      
      </div>
      
    
    </div>
    
    
    <div
      class="d-flex justify-content-center"
    >
      
      
      <button
        class="btn btn-primary"
        type="button"
      >
        Show More
      </button>
      
    
    </div>
    
  
  </div>
  
</pf-timeline-activity>
`;
